Added notes to Jupyter Notebook

--- a/JupyterNotebooks/Untitled.ipynb
+++ b/JupyterNotebooks/Untitled.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Simple process of cleaning & melting vaccination data set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -62,40 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "vac = pd.read_csv('VACINATIONDATA_MELTED.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0           int64\n",
-       "ReportName          object\n",
-       "RegionName          object\n",
-       "RegionType          object\n",
-       "PopulationRange     object\n",
-       "PopulationType      object\n",
-       "LL                 float64\n",
-       "UL                 float64\n",
-       "CI                 float64\n",
-       "Sample             float64\n",
-       "Target             float64\n",
-       "DateRange           object\n",
-       "Metric             float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vac.dtypes"
+    "vac = pd.read_csv('InfluenzaSeasonsVaccinationCoverageTrendReport_2010_2017.csv')"
    ]
   },
   {
@@ -187,36 +163,6 @@
     "dfs = [df_2010, df_2011, df_2012, df_2013, df_2014, df_2015, df_2016]\n",
     "\n",
     "vac_final = pd.concat(dfs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute 'lstrip'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-53a70903a208>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#vac_final[vac_final['CI'].str.contains('‡', regex=False)==True]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#vac_final['CI'].replace('±','')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mvac_final\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'CI'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'('\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/sidneyfox/anaconda2/lib/python2.7/site-packages/pandas/core/series.pyc\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, arg, na_action)\u001b[0m\n\u001b[1;32m   2352\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2353\u001b[0m             \u001b[0;31m# arg is a function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2354\u001b[0;31m             \u001b[0mnew_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap_f\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2355\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2356\u001b[0m         return self._constructor(new_values,\n",
-      "\u001b[0;32mpandas/_libs/src/inference.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-57-53a70903a208>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#vac_final[vac_final['CI'].str.contains('‡', regex=False)==True]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#vac_final['CI'].replace('±','')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mvac_final\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'CI'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'('\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'lstrip'"
-     ]
-    }
-   ],
-   "source": [
-    "#vac_final.filter(like='\\*', axis=0)\n",
-    "#vac_final[vac_final['Metric'].str.contains('*', regex=False)==True]\n",
-    "#vac_final[vac_final['Metric'].str.contains('†', regex=False)==True]\n",
-    "#vac_final[vac_final['Metric'].str.contains('†', regex=False)==True]\n",
-    "#vac_final[vac_final['CI'].str.contains('‡', regex=False)==True]\n",
-    "#vac_final['CI'].replace('±','')\n",
-    "vac_final['CI'].map(lambda x: x.lstrip('('))"
    ]
   },
   {
@@ -373,195 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "vac_final.to_csv('vacinationdata_melted.csv', sep=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vac.to_csv('vacinationdata_final.csv',sep=',',index=False)"
+    "vac_final.to_csv('vacinationdata_final.csv',sep=',',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "vac.drop('Unnamed: 0', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ReportName</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>RegionType</th>\n",
-       "      <th>PopulationRange</th>\n",
-       "      <th>PopulationType</th>\n",
-       "      <th>LL</th>\n",
-       "      <th>UL</th>\n",
-       "      <th>CI</th>\n",
-       "      <th>Sample</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>DateRange</th>\n",
-       "      <th>Metric</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Influenza vaccination (General Population) - Age</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>State</td>\n",
-       "      <td>≥6 months</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>40.1</td>\n",
-       "      <td>44.7</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>8221.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>42.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Influenza vaccination (General Population) - Age</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>State</td>\n",
-       "      <td>≥6 months</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>40.7</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>4082.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>37.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Influenza vaccination (General Population) - Age</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>State</td>\n",
-       "      <td>≥6 months</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>38.8</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>7714.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>41.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Influenza vaccination (General Population) - Age</td>\n",
-       "      <td>Arkansas</td>\n",
-       "      <td>State</td>\n",
-       "      <td>≥6 months</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>40.9</td>\n",
-       "      <td>47.5</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>5605.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>44.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Influenza vaccination (General Population) - Age</td>\n",
-       "      <td>California</td>\n",
-       "      <td>State</td>\n",
-       "      <td>≥6 months</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>40.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>17752.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>38.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         ReportName  RegionName RegionType  \\\n",
-       "0  Influenza vaccination (General Population) - Age     Alabama      State   \n",
-       "1  Influenza vaccination (General Population) - Age      Alaska      State   \n",
-       "2  Influenza vaccination (General Population) - Age     Arizona      State   \n",
-       "3  Influenza vaccination (General Population) - Age    Arkansas      State   \n",
-       "4  Influenza vaccination (General Population) - Age  California      State   \n",
-       "\n",
-       "  PopulationRange PopulationType    LL    UL   CI   Sample  Target DateRange  \\\n",
-       "0       ≥6 months            Age  40.1  44.7  2.3   8221.0    70.0   2010-11   \n",
-       "1       ≥6 months            Age  33.3  40.7  3.7   4082.0    70.0   2010-11   \n",
-       "2       ≥6 months            Age  38.8  45.0  3.1   7714.0    70.0   2010-11   \n",
-       "3       ≥6 months            Age  40.9  47.5  3.3   5605.0    70.0   2010-11   \n",
-       "4       ≥6 months            Age  37.6  40.2  1.3  17752.0    70.0   2010-11   \n",
-       "\n",
-       "   Metric  \n",
-       "0    42.4  \n",
-       "1    37.0  \n",
-       "2    41.9  \n",
-       "3    44.2  \n",
-       "4    38.9  "
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vac.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
